@@ -14,26 +14,27 @@ AUX minetestserver.initd 682 SHA256 5c808e03db1d234922b960a1691326bdcd8195593edd
 DIST minetest-0.4.10.tar.gz 5291236 SHA256 05d15c8e2c8e53ee9d3006e79c2b59200311a7b879220d8b6f6a6fd2acf806b6 SHA512 0d2f2590df530df9bed11a08a3e67dfa39dae1987b8c1f6a4f4f2ace2c40dea3b5afce445e3b2e17b2bd8a426bdd53d717989018f5da531b1eb10965d953c3bf WHIRLPOOL 016c2bc6f9aed44943f238491c445f48013f76a74f9c09e56c1e70e03fa3ded72b042b9dffa0bed81a9dcdc84358a9be88bbf32119dd45a1e2a9873031be1009
 DIST minetest-0.4.9.tar.gz 5195312 SHA256 b394eeb054aa6cd0f022535e486a0c61504039f48671791da2a84da4bc5b2a26 SHA512 8d4185c99425ffd9de18abbe6de14189e0a7818aa5e554bcef05d66ab3ff16a63b0ce8105eca55609738867d518c95c7fcee08fb62ee424ecbef057a71424bcf WHIRLPOOL 84de3bf1b9287173e7e046e7f293b282aab8fdd23e9b899ea2bb1adcbf80fe9ae8cc76709142c46f6519574fe915037e13154dc4488ebe0b3db9596e6f9c93f8
 EBUILD minetest-0.4.10-r1.ebuild 3582 SHA256 095a822dd458ebc8b66648c5c7fdf8af65fc7779ad6a716a1185604e286b90a5 SHA512 f1a479d973dd572c79bfb8fe18975928f003ae47bae099ece13bca0576336d39bb9bebb3eac7612cbef11237b028e1ae917cb62a9c67ff83edbfbc04c23a205c WHIRLPOOL 07a7c50fc3a77f39a7f32df3234ccb8c7b98fc9a60889b509e05115cf2aceccdb0f48fcc61d2f6a2d924a290c327bf1bfc5ce3e22088edf7374c40af1b1102b5
+EBUILD minetest-0.4.10-r2.ebuild 3466 SHA256 b87469713f0bd96f7e70764e2a2f01015df763484cb25b01b1d81f8dc8c6dda2 SHA512 9ab4d43d67df346c6399887d58a5543bbe4feda38d80bb2ce8d122adaed35600014fc7dc7d16d95fa4203c2995b1794bcfbef5351ad7fca887d74ff82b8887b6 WHIRLPOOL 06a1add578a6d6fb312454d29b26225f280603ee73376b6e7e1e49668134f600544f2e4d01d7946cbca0e316e3ca58ab930b83b51b00096b38981b25b446085d
 EBUILD minetest-0.4.10.ebuild 3414 SHA256 0c937d481d740ff43b364ea3599770f8a5b33035cf768878e785253cc2b61ce5 SHA512 1dfd70df92d0850cadca9208d1bd8773b425ed483907dba6c131f30c3c2d75a0ec719cbf5b4feea6f29b3e9106f8c2770b090f135aaf166a3e7be4e9d993a92e WHIRLPOOL 4c4bcb4bf7cce5d99acd8c62d8817804dad6fa188e68d0eee9bb491f5ab5c9bfff9bb3a0231d4966d599346f4a89496edd7bcf23d1b0bc0d0eeeca6382b56fae
 EBUILD minetest-0.4.9.ebuild 3392 SHA256 599d0805b5d4052c2767db31158a499bfc5b54e985aac8c76caa83c2fa149da3 SHA512 b1dfcde2c051e48dfa06a6f2b61624f339cb8df08bc81da71cc81e33429f06ca979f6dce24444006ab671d8986356e0a5adc4a5e9e5285e424fca2cf691a7f33 WHIRLPOOL 2243d0db2092a866e87733bfc9d4ae28581c66ee3536e485f05b9dd46e344da730587e2638913cdbe234486fa90d03f93034496db8a6d4707d76d44b8170f8d2
-MISC ChangeLog 3023 SHA256 a8e5ab5093beca0566d6c559aa5c09b05b3029b590cd2cb0f95a646d3dfaf8e6 SHA512 b653445395388ec4ade160366c377cdb5d6d198791149b3d2bf68f2d7d16f06bb726d585cd96673da1fae39cd6fc2de1848c1f2c95f07097f93594b85170bdf1 WHIRLPOOL 5723fa34f54ae766c7b01261fe333d00d7552e75f604d56ab96191e6a4913c1068a3c5d658ad31893befb10ae11dc5bfe6c5f25ecde0519e07f00b1687ebb364
+MISC ChangeLog 3156 SHA256 9a8fd429c78a542c5942d5fc25795414cfb33594e6a21378d6e80ebcb536ed27 SHA512 c608e7f3bbbe1223a5239f0b5ec07cb70dbbc460d5cdabb1b0d38e84dc54b157f6210b900cef1f596032c1c38127561a9b3283c569bcab26da826c5012fbfe04 WHIRLPOOL 8d9306bcbe757ba87c3f8007b494e71504aa76b82b3e295ba7abf0a1b80eed62603c0c9dc0d3cf0eac94dab16845721d1e2ff37604a16e830f6fccc5f575984c
 MISC metadata.xml 2249 SHA256 f22b39e4d62597c7a10c0f60c259d6ba551f238cd07cf74f6fc5dc6389e27f25 SHA512 370e465d369e762a595d6bf26d6dab8745e54618b101045dde951265126d1b59c778f84dae2365eb9d78865d658f66bcd021b5e344d26940650aac35b3b54e46 WHIRLPOOL f9327e6548f803715b5faf02c0d57863e00d1a84414c38f11fe2886785915c50ef33fefbac82f05f74801b08f9f2a3277666ed5fcdcb4b2b89edf16c7ab30c29
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUF0FHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUJHeKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgDFEQAO5fCuUZEs6ISYNMmSCgIPZD
-Ori00dHPcBFXH6Of54JkFyqXz87Bmw0uodRXiAjg8viGV/uMTms3mK8PVix5iIUP
-bbcDZZAw0YREkSJda5pTy0OYBjUdhCsswraz3BtPMQ2hzLcRs/QaOnONMP7wW7Ta
-IfeHKL9pyXlZA13oNdDQIuTISQnI0KsQc1lNTybcYVvtHj6oDCKs6yJnY48vkSkO
-+x5DfQEQlMefzfWConrVBbfjTKRafaWhEhNqPESHHcuoXjA2Z2OmZbKQfjWy/JLX
-vKAAailRCCRY6tbkZSoewnh3sda5fwTkLZevfw92VjgemphpOJZ1Ru7+HXL5gJaI
-Q7+SWsM+gO5Ym2NROVmOcS+LE7RofAs+EK9qPUYrqlqJFPqxEK+BODfWYA1Njqo2
-7Az4ABvf+wvay7/8fiFKi1JFdu3j2VqdnN6XhbmNUp9j2TF5uHH+5R8fNXqmMVDh
-APpAajiuxh8brTXupgqOR+g4hOyK+K1iHrTWisqALw/p2VQQ2pLb5AU3SBMT7USo
-l/NYS3ZgQFGlgZ+26iMAAJfcmP1jLSa3KH//r9jaKBlaneR8C71AtH/y5KK2c+6w
-YB0PqIjzopqc13h0Mqmj0pT5G3NXr4/H4CmVEI2EmyzsrhTZP3nI4clgPnr17mKO
-cEyQFYhEZEnHF0r9i05b
-=edqF
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgu6wP/AzLs9gAVB2q/KCCk5lT0jEx
+qob0B/sdo/mJOgUHjzcQBt/euyXTfpGzKUEivl3cNDwr/+1zRBfv2+LFADE8qsn5
+HI5y6GQ5o7aYJnmF02u2321W7BzfImDc4zPxokpBYI1G6JK3q/xGbeWSGqs9otrd
+5MgKcnVpOxUNqCMDHrqxYK2fCuD3qhWrkmuaYX9KsFHKZWNs1jc8sutipCnCE41+
+sbcX6vlmp40dnLAUGEeipmHR2dSLPZE/DiKvSVCXBcrPt20ObcuIjH6Xfme8P2ov
+tTty4A7gz+ro7uWSZdTQFH8lGBve/DFWFMHpPMHhtsk7ZIk7uBBMKGdybqBswl1S
+ePYL2CHTBTVS8EWPMvDWgx6H0ufvG4wJXnb6GhGcNd7tDD22eCRU1AbLRJ+qpGgv
+huYDpDZOBc3rHJirhpY+OsK0DLBpWFq+X+O2CVQNle4Z6GGk/3Gu/1EUYADzQFw0
+UIXeVtn6LJvTlwUs07JVZ117vIOewaaxDLDSiXD7Q4Km0DSlbKu67W4bbEPU6phJ
+9lQ7v77UuI3LTogwINMwlYOGFCx0UZGKXpaFEvzt8d1Dx4+haT93X14q3GksDjfv
+i2AmnibWoM/0rD4HYcOFOByA1iJANhXcrABxjeQ2cDeI3uzx/9lW+kUTqiWnMIFw
+L66uDDOaK8i78/9bwtJw
+=T7Uq
 -----END PGP SIGNATURE-----
