@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=dev-db/sqlite:3 sys-libs/zlib curl? ( net-misc/curl ) !dedicated? ( app-arch/bzip2 >=dev-games/irrlicht-1.8-r2 media-libs/libpng:0 virtual/jpeg virtual/opengl x11-libs/libX11 x11-libs/libXxf86vm sound? ( media-libs/libogg media-libs/libvorbis media-libs/openal ) truetype? ( media-libs/freetype:2 ) ) leveldb? ( dev-libs/leveldb ) luajit? ( dev-lang/luajit:2 ) nls? ( virtual/libintl ) redis? ( dev-libs/hiredis ) >=dev-games/irrlicht-1.8-r2 nls? ( sys-devel/gettext ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4
+DESCRIPTION=An InfiniMiner/Minecraft inspired game
+EAPI=5
+HOMEPAGE=http://minetest.net/
+IUSE=+curl dedicated leveldb luajit nls redis +server +sound +truetype
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1+ CC-BY-SA-3.0
+RDEPEND=dev-db/sqlite:3 sys-libs/zlib curl? ( net-misc/curl ) !dedicated? ( app-arch/bzip2 >=dev-games/irrlicht-1.8-r2 media-libs/libpng:0 virtual/jpeg virtual/opengl x11-libs/libX11 x11-libs/libXxf86vm sound? ( media-libs/libogg media-libs/libvorbis media-libs/openal ) truetype? ( media-libs/freetype:2 ) ) leveldb? ( dev-libs/leveldb ) luajit? ( dev-lang/luajit:2 ) nls? ( virtual/libintl ) redis? ( dev-libs/hiredis ) games-misc/games-envd
+SLOT=0
+SRC_URI=http://github.com/minetest/minetest/tarball/0.4.10 -> minetest-0.4.10.tar.gz
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	games	e221fed675714bd5545b7488aed9f822	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
+_md5_=9eea0a631976870b53053dca669435c2
